# editchain

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN-q2.md  README.md  clippy.toml  deny.toml  rust-toolchain.toml
.claude/plans/: q1-implementation-plan.md  seed-implementation.md
.github/workflows/: lint.yml
crates/editchain-agent/: Cargo.toml
crates/editchain-agent/config/: swebench.yaml
crates/editchain-agent/scripts/: dump_dataset.py
crates/editchain-agent/src/: agent.rs  config.rs  docker_env.rs  lib.rs  main.rs  model.rs  swebench.rs  trajectory.rs
crates/editchain-codec/: Cargo.toml
crates/editchain-codec/src/: frame.rs  lib.rs  page.rs
crates/editchain-codec/tests/: frame.rs  page.rs  properties.rs
crates/editchain-core/: Cargo.toml
crates/editchain-core/src/: clock.rs  ids.rs  lib.rs  op.rs  parents.rs  payload.rs  scope.rs  state.rs  tags.rs
crates/editchain-core/tests/: clock.rs  golden.rs  properties.rs  state.rs  tags.rs
crates/editchain-embed/: Cargo.toml
crates/editchain-embed/src/: http.rs  lib.rs  model.rs
crates/editchain-embed/tests/: model.rs  smoke.rs
crates/editchain-import/: Cargo.toml
crates/editchain-import/src/: cursor.rs  error.rs  ids.rs  import.rs  lib.rs  model.rs  sink.rs
crates/editchain-import/src/claude_code/: discover.rs  envelope.rs  mod.rs  normalize.rs  reader.rs
crates/editchain-import/tests/: cursor.rs  discover.rs  envelope.rs  ids.rs  normalize.rs  properties.proptest-regressions  properties.rs  reader.rs
crates/editchain-index/: Cargo.toml
crates/editchain-index/src/: chunker.rs  lexical.rs  lib.rs  snapshot.rs  vector.rs
crates/editchain-index/tests/: chunker.rs  lexical.rs  vector.rs
crates/editchain-node/: Cargo.toml
crates/editchain-node/src/: daemon.rs  export.rs  lib.rs  segment.rs
crates/editchain-node/src/commands/: append.rs  dump.rs  import.rs  init.rs  merge.rs  mod.rs  retrieve.rs  search.rs  tail.rs
crates/editchain-node/src/services/: chain_reader.rs  mod.rs
crates/editchain-node/tests/: daemon.rs  export.rs  segment.rs
crates/editchain-query/: Cargo.toml
crates/editchain-query/src/: fusion.rs  graph.rs  hybrid.rs  lib.rs  search.rs  summarize.rs
crates/editchain-query/tests/: fusion.rs  graph.rs  hybrid.rs  summarize.rs
crates/editchain-sync/: Cargo.toml
crates/editchain-sync/src/: lib.rs  msg.rs
crates/editchain-tui/: Cargo.toml
crates/editchain-tui/src/: action.rs  app.rs  event.rs  keymap.rs  main.rs  theme.rs
crates/editchain-tui/src/components/: dag_log.rs  help_popup.rs  inspector.rs  mod.rs  status_bar.rs
crates/editchain-tui/src/dag/: lanes.rs  mod.rs  row.rs
crates/editchain-tui/src/data/: filters.rs  generator.rs  header.rs  loader.rs  mod.rs  snapshot.rs
quests/: q0.md  q0.result.md  q1.md  q1.result.md  q2.debug1.md  q2.md  q2.result.md  q3.md  q3.result.md  seed.md  seed.result.md
quests/drs/: q1.gpt55pro.md  q2.gpt56pro.md  q3.gpt56pro.md  seed.gpt55pro.md
scripts/: lint.sh
