[workspace]
resolver = "2"
members = [
    "crates/editchain-core",
    "crates/editchain-codec",
    "crates/editchain-sync",
    "crates/editchain-node",
    "crates/editchain-import",
    "crates/editchain-agent",
    "crates/editchain-query",
    "crates/editchain-index",
    "crates/editchain-embed",
    "crates/editchain-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.97"
description = "CRDT-based edit chain for agent edit history"
repository = "https://github.com/ambientlight/editchain"
readme = "README.md"
keywords = ["crdt", "edit-chain", "agent"]
categories = ["data-structures", "database-implementations"]

[workspace.lints.rust]
warnings = { level = "deny", priority = -3 }
unsafe_code = "forbid"
future_incompatible = { level = "deny", priority = -2 }
nonstandard_style = { level = "deny", priority = -2 }
rust_2018_idioms = { level = "deny", priority = -2 }
rust_2024_compatibility = { level = "deny", priority = -2 }
unused = { level = "deny", priority = -2 }
let_underscore = { level = "deny", priority = -2 }
ambiguous_negative_literals = "deny"
closure_returning_async_block = "deny"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "deny"
meta_variable_misuse = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unnameable_types = "deny"
unreachable_pub = "deny"
unstable_features = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
unused_results = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -2 }
pedantic = { level = "deny", priority = -2 }

# Specific cargo lints (not the whole group — avoids metadata noise).
cargo_common_metadata = "deny"

# Specific nursery lints that add real value.
missing_assert_message = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
as_conversions = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
panic_in_result_fn = "deny"
string_slice = "deny"
unwrap_used = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
exit = "deny"
print_stderr = "deny"
print_stdout = "deny"
enum_glob_use = "deny"
wildcard_enum_match_arm = "deny"
wildcard_imports = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
map_err_ignore = "deny"
mem_forget = "deny"
multiple_unsafe_ops_per_block = "deny"
undocumented_unsafe_blocks = "deny"
too_many_lines = "allow"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
missing_crate_level_docs = "deny"
private_intra_doc_links = "deny"
redundant_explicit_links = "deny"
unescaped_backticks = "deny"

[workspace.dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false }
proptest = "1"
