[package]
name = "editchain-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
editchain-core = { path = "../editchain-core" }
editchain-codec = { path = "../editchain-codec" }

serde = { workspace = true, features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
minijinja = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }