[package]
name = "editchain-codec"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["use-std"]
use-std = ["serde/std", "postcard/use-std"]

[dependencies]
serde.workspace = true
postcard.workspace = true
editchain-core = { path = "../editchain-core" }