[package]
name = "editchain-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["use-std"]
use-std = ["serde/std", "postcard/use-std"]

[dependencies]
serde.workspace = true
postcard.workspace = true

[dev-dependencies]
proptest = "1"