[package]
name = "editchain-import"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
sha2 = "0.10"
editchain-core = { path = "../editchain-core" }
editchain-codec = { path = "../editchain-codec" }

[dev-dependencies]
tempfile = "3"