[package]
name = "editchain-import"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
sha2 = "0.10"
editchain-core = { path = "../editchain-core" }

[dev-dependencies]
tempfile = "3"
proptest = "1"