[package]
name = "editchain-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
tantivy = "0.22"
roaring = "0.10"
half = "2"
editchain-core = { path = "../editchain-core" }
editchain-query = { path = "../editchain-query" }
editchain-embed = { path = "../editchain-embed" }