[package]
name = "editchain-index"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
tantivy = "0.22"
roaring = "0.10"
half = "2"
editchain-core = { path = "../editchain-core" }
editchain-query = { path = "../editchain-query" }
editchain-embed = { path = "../editchain-embed" }