[package]
name = "editchain-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
editchain-core = { path = "../editchain-core" }
editchain-codec = { path = "../editchain-codec" }
editchain-import = { path = "../editchain-import" }

[dev-dependencies]
tempfile = "3"