[package]
name = "editchain-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
editchain-core = { path = "../editchain-core" }
editchain-codec = { path = "../editchain-codec" }
editchain-node = { path = "../editchain-node" }
serde = { workspace = true }
serde_json = "1"